<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_repository_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_repository_title"
        android:textColor="@color/rv_item_color"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_repository_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_repository_title"
        android:text="@string/github_repository_description"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_repository_description"
        android:layout_marginTop="10dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_repository_language_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/repository_language_label"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_repository_language"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/repository_programming_language"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_repository_stargazers_count"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/star_icon_description"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/tv_repository_stargazers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_repository_stargazers"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>